@@ -358,7 +358,6 @@ extern struct Battle_Config {
 	unsigned short skill_steal_max_tries; //max steal skill tries on a mob. if=256, then w/o limit [Lupus]
 //	unsigned short night_darkness_level; // [celest]
 	unsigned short motd_type; // [celest]
-	unsigned short allow_atcommand_when_mute; // [celest]
 	unsigned short finding_ore_rate; // orn
 	unsigned short exp_calc_type;
 	unsigned short min_skill_delay_limit;
